Remove extraneous comments in example notebook.

--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -82,9 +82,9 @@
    "outputs": [],
    "source": [
     "slurm_test_1 = SlurmTest('slurm_test_1',\n",
-    "                         [{'': [chr(a+65) + chr(b+65)],  # The key '' indicates a list of positional arguments for each task\n",
-    "                           'a': a, 'b': b,               # Each key/value pair are passed as --key=value to each task\n",
-    "                           '|desc': '%d + %d' % (a, b)   # Arguments that begin with | are not passed, but appear in the output\n",
+    "                         [{'': [chr(a+65) + chr(b+65)],\n",
+    "                           'a': a, 'b': b,\n",
+    "                           '|desc': '%d + %d' % (a, b)\n",
     "                          } for a in range(3) for b in range(3)])"
    ]
   },
@@ -335,9 +335,9 @@
     "from experiment import Experiment\n",
     "\n",
     "experiment_1 = Experiment('python example_tool.py',\n",
-    "                          [{'': [chr(a+65) + chr(b+65)],  # The key '' indicates a list of positional arguments for each task\n",
-    "                            'a': a, 'b': b,               # Each key/value pair are passed as --key=value to each task\n",
-    "                            '|desc': '%d + %d' % (a, b)   # Arguments that begin with | are not passed, but appear in the output\n",
+    "                          [{'': [chr(a+65) + chr(b+65)],\n",
+    "                            'a': a, 'b': b,\n",
+    "                            '|desc': '%d + %d' % (a, b)\n",
     "                           } for a in range(3) for b in range(3)])"
    ]
   },
