Update readme, fix typos.

--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When running many experiments on the same tool, it is convenient to define a subclass of SlurmExperiment to hold any additional server setup."
+    "When running many experiments on the same tool, it is convenient to define a subclass of ```SlurmExperiment``` to hold any additional server setup."
    ]
   },
   {
@@ -58,7 +58,6 @@
    "outputs": [],
    "source": [
     "from slurm_experiment import SlurmExperiment\n",
-    "\n",
     "class SlurmTest(SlurmExperiment):\n",
     "    def __init__(self, experiment_id, changing_args):\n",
     "        SlurmExperiment.__init__(self, 'experiments/' + experiment_id, 'python example_tool.py', changing_args,\n",
