Update python notebook to use single import

--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -14,8 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dashboard\n",
-    "davinci = dashboard.SLURMServer('davinci.rice.edu', 'jmd11', 'C:/Users/Jeffrey/.ssh/id_rsa')"
+    "import slurmqueen\n",
+    "\n",
+    "davinci = slurmqueen.SlurmServer('davinci.rice.edu', 'jmd11', 'C:/Users/Jeffrey/.ssh/id_rsa')"
    ]
   },
   {
@@ -31,10 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from slurm_experiment import ExperimentConfig\n",
-    "config = ExperimentConfig(server=davinci,\n",
-    "                          local_directory='C:/Work/Projects/SlurmQueen/example',\n",
-    "                          remote_directory='/scratch/jmd11/experiments/slurmqueen')"
+    "config = slurmqueen.ExperimentConfig(\n",
+    "             server=davinci,\n",
+    "             local_directory='C:/Work/Projects/SlurmQueen/example',\n",
+    "             remote_directory='/scratch/jmd11/experiments/slurmqueen')"
    ]
   },
   {
@@ -57,12 +58,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from slurm_experiment import SlurmExperiment\n",
-    "class SlurmTest(SlurmExperiment):\n",
+    "class SlurmTest(slurmqueen.SlurmExperiment):\n",
     "    def __init__(self, experiment_id, changing_args):\n",
-    "        SlurmExperiment.__init__(self, 'experiments/' + experiment_id, 'python example_tool.py', changing_args,\n",
-    "                                 ['example_tool.py'],\n",
-    "                                 setup_commands='\\n'.join([\"module load Anaconda3/5.0.0\"]))"
+    "        slurmqueen.SlurmExperiment.__init__(self, 'experiments/' + experiment_id, \n",
+    "                                            'python example_tool.py',\n",
+    "                                             changing_args,\n",
+    "                                             ['example_tool.py'],\n",
+    "                                             setup_commands=\"module load Anaconda3/5.0.0\")"
    ]
   },
   {
@@ -331,13 +333,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from experiment import Experiment\n",
-    "\n",
-    "experiment_1 = Experiment('python example_tool.py',\n",
-    "                          [{'': [chr(a+65) + chr(b+65)],\n",
-    "                            'a': a, 'b': b,\n",
-    "                            '|desc': '%d + %d' % (a, b)\n",
-    "                           } for a in range(3) for b in range(3)])"
+    "experiment_1 = slurmqueen.Experiment('python example_tool.py',\n",
+    "                                     [{'': [chr(a+65) + chr(b+65)],\n",
+    "                                       'a': a, 'b': b,\n",
+    "                                       '|desc': '%d + %d' % (a, b)\n",
+    "                                      } for a in range(3) for b in range(3)])"
    ]
   },
   {
