--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -95,11 +95,11 @@
    "source": [
     "## Running an experiment\n",
     "\n",
-    "Once we have defined an experiment and a configuration, we can run the experiment on the provided cluster in a single command. In this case, we run the 9 tasks using 2 SLURM workers. Each worker is given a timeout of 5 minutes. The following command performs each of the following steps:\n",
+    "Once we have defined an experiment and a configuration, we can run the experiment on the provided cluster in a single command. In this case, we run the 9 tasks using 2 Slurm workers. Each worker is given a timeout of 5 minutes. The following command performs each of the following steps:\n",
     "1. Creates a set of 9 .in files in ```experiments/slurm_test_1/```, each defining a single task.\n",
-    "2. Copies all .in files and all dependencies provided to the ```SlurmExperiment``` to the SLURM cluster, in the folder indicated in ```config```\n",
-    "3. Generates an appropriate SLURM script to run all tasks on the provided number of workers (distributed in a round-robin way).\n",
-    "4. Submits the SLURM job, returning the job id."
+    "2. Copies all .in files and all dependencies provided to the ```SlurmExperiment``` to the Slurm cluster (in ```remote_directory```)\n",
+    "3. Generates an appropriate Slurm script to run all tasks on the provided number of workers (distributed in round-robin).\n",
+    "4. Submits the Slurm job, returning the job id."
    ]
   },
   {
@@ -116,7 +116,7 @@
       "Compressed local files\n",
       "Copied files to remote server\n",
       "Attempting to submit job\n",
-      "Submitted batch job 4904649\n",
+      "Submitted batch job 4931428\n",
       "\n"
      ]
     }
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## (Optional) Generating and analyzing an experiment without a SLURM cluster.\n",
+    "## (Optional) Generating/Analyzing an experiment without a SLURM cluster.\n",
     "\n",
     "To aid in reproducability, an experiment can be generated and analyzed even without access to a SLURM cluster. In particular, the code in ```experiment.py``` is sufficient to generate all ```*.in``` files and provide an SQL interface to results.\n",
     "\n",
