--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Configuration\n",
-    "First, we specify the SLURM server and login information:"
+    "First, we specify the Slurm server and login information:"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we choose a local directory on the current machine and a remote directory on the SLURM cluster. Note these directories will be created (when a job is started) if they do not currently exist."
+    "Next, we choose a local directory on the current machine and a remote directory on the Slurm cluster. Note these directories will be created (when a job is started) if they do not currently exist."
    ]
   },
   {
@@ -401,36 +401,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AAAAAA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>./0.out</td>\n",
-       "      <td>0 + 0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ABABAB</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>./1.out</td>\n",
-       "      <td>0 + 1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ACACAC</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>./2.out</td>\n",
-       "      <td>0 + 2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>BABABA</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -440,7 +410,7 @@
        "      <td>1 + 0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
        "      <td>BBBBBB</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -450,7 +420,7 @@
        "      <td>1 + 1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>2</th>\n",
        "      <td>BCBCBC</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -459,51 +429,15 @@
        "      <td>./5.out</td>\n",
        "      <td>1 + 2</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>CACACA</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>./6.out</td>\n",
-       "      <td>2 + 0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>CBCBCB</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>./7.out</td>\n",
-       "      <td>2 + 1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>CCCCCC</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>./8.out</td>\n",
-       "      <td>2 + 2</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "  Repeated Text  Sum  a  b  file   output  |desc\n",
-       "0        AAAAAA    0  0  0     0  ./0.out  0 + 0\n",
-       "1        ABABAB    1  0  1     1  ./1.out  0 + 1\n",
-       "2        ACACAC    2  0  2     2  ./2.out  0 + 2\n",
-       "3        BABABA    1  1  0     3  ./3.out  1 + 0\n",
-       "4        BBBBBB    2  1  1     4  ./4.out  1 + 1\n",
-       "5        BCBCBC    3  1  2     5  ./5.out  1 + 2\n",
-       "6        CACACA    2  2  0     6  ./6.out  2 + 0\n",
-       "7        CBCBCB    3  2  1     7  ./7.out  2 + 1\n",
-       "8        CCCCCC    4  2  2     8  ./8.out  2 + 2"
+       "0        BABABA    1  1  0     3  ./3.out  1 + 0\n",
+       "1        BBBBBB    2  1  1     4  ./4.out  1 + 1\n",
+       "2        BCBCBC    3  1  2     5  ./5.out  1 + 2"
       ]
      },
      "execution_count": 10,
@@ -512,8 +446,15 @@
     }
    ],
    "source": [
-    "experiment_1.instance('experiments/slurm_test_1').query('SELECT * FROM data')"
+    "experiment_1.instance('experiments/slurm_test_1').query('SELECT * FROM data WHERE a=1')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
