Add additional clarifications to example

--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -49,7 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When running many experiments on the same tool, it is convenient to define a subclass of ```SlurmExperiment``` to hold any additional server setup."
+    "When running many experiments on the same tool, it is convenient to define a subclass of ```SlurmExperiment``` to hold any additional server setup.\n",
+    "\n",
+    "Note that our example tool requires the python package ```click``` to be installed on the cluster. We satisfy this dependency by loading the ```Anaconda3``` module on the cluster before running the tool."
    ]
   },
   {
@@ -320,9 +322,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## (Optional) Generating/Analyzing an experiment without a SLURM cluster.\n",
+    "## (Optional) Generating/Analyzing an experiment without a Slurm cluster.\n",
     "\n",
-    "To aid in reproducability, an experiment can be generated and analyzed even without access to a SLURM cluster. In particular, the code in ```experiment.py``` is sufficient to generate all ```*.in``` files and provide an SQL interface to results.\n",
+    "To aid in reproducability, an experiment can be generated and analyzed even without access to a Slurm cluster. In particular, the ```Experiment``` class (in ```experiment.py```) is sufficient to generate all ```*.in``` files and provide an SQL interface to results without requiring access to a Slurm cluster.\n",
     "\n",
     "We can define an experiment here purely as the command and set of arguments."
    ]
@@ -360,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each ```*.in``` file is a complete bash script that runs a single task and produces the corresponding ```.out``` files. Once these ```.out``` files are computated separately or previously provided, the SQL interface can still be used to find the results."
+    "Each ```*.in``` file is a complete bash script that runs a single task and produces the corresponding ```.out``` file. Once all ```*.out``` files are computated separately or previously provided, the SQL interface can still be used to find the results."
    ]
   },
   {
