Add further prose to example

--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -23,7 +23,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we choose a local directory on the current machine and a remote directory on the Slurm cluster. Note these directories will be created (when a job is started) if they do not currently exist."
+    "`davinci.rice.edu` is the Slurm server to connect to. `jmd11` is the account to use on the server. `C:/Users/Jeffrey/.ssh/id_rsa` is an SSH private key used to connect with the server; the corresponding public key should be added to the Slurm server (see [here](https://adamdehaven.com/blog/how-to-generate-an-ssh-key-and-add-your-public-key-to-the-server-for-authentication/) for details on generation and use of SSH keys)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we choose a local directory on the current machine (e.g. `C:/Work/Projects/SlurmQueen/example`) and a remote directory on the Slurm cluster (e.g. `/scratch/jmd11/experiments/slurmqueen`). The remote directory should generally be in the scratch filesystem of the Slurm cluster if possible. These directories will be created when a job is started if they do not currently exist."
    ]
   },
   {
@@ -51,7 +58,7 @@
    "source": [
     "When running many experiments on the same tool, it is convenient to define a subclass of ```SlurmExperiment``` to hold any additional server setup.\n",
     "\n",
-    "Note that our example tool requires the python package ```click``` to be installed on the cluster. We satisfy this dependency by loading the ```Anaconda3``` module on the cluster before running the tool."
+    "Our example tool requires the python package ```click``` to be installed on the cluster. We satisfy this dependency by loading the ```Anaconda3/5.0.0``` module on the cluster before running the tool. The string passed to `setup_commands` is copied directly to the [script used to eventually submit the Slurm job](experiments/slurm_test_1/_run.sh), after pregenerated SBATCH arguments but before any tasks are executed. Custom arguments to `sbatch` can also be provided here, e.g. `#SBATCH --mem=0` to allow full use of the node memory."
    ]
   },
   {
@@ -97,7 +104,7 @@
    "source": [
     "## Running an experiment\n",
     "\n",
-    "Once we have defined an experiment and a configuration, we can run the experiment on the provided cluster in a single command. In this case, we run the 9 tasks using 2 Slurm workers. Each worker is given a timeout of 5 minutes. The following command performs each of the following steps:\n",
+    "Once we have defined an experiment and a configuration, we can run the experiment on the provided cluster in a single command. In this case, we run the 9 tasks using 2 Slurm workers (on two separate nodes in the cluster). Each worker is given a timeout of 5 minutes. The following command performs each of the following steps:\n",
     "1. Creates a set of 9 .in files in ```experiments/slurm_test_1/```, each defining a single task.\n",
     "2. Copies all .in files and all dependencies provided to the ```SlurmExperiment``` to the Slurm cluster (in ```remote_directory```)\n",
     "3. Generates an appropriate Slurm script to run all tasks on the provided number of workers (distributed in round-robin).\n",
@@ -125,6 +132,13 @@
    ],
    "source": [
     "slurm_test_1.slurm_instance(config).run(2, '5:00')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`run` also accepts two optional arguments not shown here: `cpus_per_worker` to indicate the number of cpus to request on the Slurm node allocated to each worker (default `1`) and `partition` to indicate the partition on the cluster to use (default `\"commons\"`)."
    ]
   },
   {
