Include partition in ExperimentConfig

--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we choose a local directory on the current machine (e.g. `C:/Work/Projects/SlurmQueen/example`) and a remote directory on the Slurm cluster (e.g. `/scratch/jmd11/experiments/slurmqueen`). The remote directory should generally be in the scratch filesystem of the Slurm cluster if possible. These directories will be created when a job is started if they do not currently exist."
+    "Next, we choose a partition on the Slurm cluster (e.g. `commons`), a local directory on the current machine (e.g. `C:/Work/Projects/SlurmQueen/example`) and a remote directory on the Slurm cluster (e.g. `/scratch/jmd11/experiments/slurmqueen`). The remote directory should generally be in the scratch filesystem of the Slurm cluster if possible. These directories will be created when a job is started if they do not currently exist."
    ]
   },
   {
@@ -40,9 +40,10 @@
    "outputs": [],
    "source": [
     "config = slurmqueen.ExperimentConfig(\n",
-    "             server=davinci,\n",
-    "             local_directory='C:/Work/Projects/SlurmQueen/example',\n",
-    "             remote_directory='/scratch/jmd11/experiments/slurmqueen')"
+    "    server=davinci,\n",
+    "    partition='commons',\n",
+    "    local_directory='C:/Work/Projects/SlurmQueen/example',\n",
+    "    remote_directory='/scratch/jmd11/experiments/slurmqueen')"
    ]
   },
   {
@@ -125,7 +126,7 @@
       "Compressed local files\n",
       "Copied files to remote server\n",
       "Attempting to submit job\n",
-      "Submitted batch job 4932061\n",
+      "Submitted batch job 5297886\n",
       "\n"
      ]
     }
@@ -138,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`run` also accepts two optional arguments not shown here: `cpus_per_worker` to indicate the number of cpus to request on the Slurm node allocated to each worker (default `1`) and `partition` to indicate the partition on the cluster to use (default `\"commons\"`)."
+    "`run` also accepts an optional argument not shown here, `cpus_per_worker`, to indicate the number of cpus to request on the Slurm node allocated to each worker (default `1`)."
    ]
   },
   {
