Allow for globs to specify tool dependencies

--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -57,7 +57,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When running many experiments on the same tool, it is convenient to define a subclass of ```SlurmExperiment``` to hold any additional server setup.\n",
+    "When running many experiments on the same tool, it is convenient to define a subclass of ```SlurmExperiment``` to hold any additional server setup. The positional arguments to SlurmExperiment are, in order:\n",
+    "1. A path (relative to ```local_directory``` and ```remote_directory```) where the input and output files for this experiment should be stored.\n",
+    "2. The command to use to run the tool. In this case, ```example_tool.py``` is run through python.\n",
+    "3. The list of tasks to execute for this experiment; see below.\n",
+    "4. A list of file dependencies for this tool. Note that each can also be a Unix glob to capture multiple files. In this case, our example tool requires a single file to run: ```example_tool.py```.\n",
     "\n",
     "Our example tool requires the python package ```click``` to be installed on the cluster. We satisfy this dependency by loading the ```Anaconda3/5.0.0``` module on the cluster before running the tool. The string passed to `setup_commands` is copied directly to the [script used to eventually submit the Slurm job](experiments/slurm_test_1/_run.sh), after pregenerated SBATCH arguments but before any tasks are executed. Custom arguments to `sbatch` can also be provided here, e.g. `#SBATCH --mem=0` to allow full use of the node memory.\n",
     "\n",
