--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -16,14 +16,14 @@
    "source": [
     "import slurmqueen\n",
     "\n",
-    "davinci = slurmqueen.SlurmServer('davinci.rice.edu', 'jmd11', 'C:/Users/Jeffrey/.ssh/id_rsa')"
+    "nots = slurmqueen.SlurmServer('nots.rice.edu', 'jmd11', 'C:/Users/Jeffrey/.ssh/id_rsa')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`davinci.rice.edu` is the Slurm server to connect to. `jmd11` is the account to use on the server. `C:/Users/Jeffrey/.ssh/id_rsa` is an SSH private key used to connect with the server; the corresponding public key should be added to the Slurm server (see [here](https://adamdehaven.com/blog/how-to-generate-an-ssh-key-and-add-your-public-key-to-the-server-for-authentication/) for details on generation and use of SSH keys)."
+    "`nots.rice.edu` is the Slurm server to connect to. `jmd11` is the account to use on the server. `C:/Users/Jeffrey/.ssh/id_rsa` is an SSH private key used to connect with the server; the corresponding public key should be added to the Slurm server (see [here](https://adamdehaven.com/blog/how-to-generate-an-ssh-key-and-add-your-public-key-to-the-server-for-authentication/) for details on generation and use of SSH keys)."
    ]
   },
   {
@@ -40,8 +40,8 @@
    "outputs": [],
    "source": [
     "config = slurmqueen.ExperimentConfig(\n",
-    "    server=davinci,\n",
-    "    partition='commons',\n",
+    "    server=nots,\n",
+    "    partition='scavenge',\n",
     "    local_directory='C:/Work/Projects/SlurmQueen/example',\n",
     "    remote_directory='/scratch/jmd11/experiments/slurmqueen')"
    ]
@@ -63,7 +63,7 @@
     "3. The list of tasks to execute for this experiment; see below.\n",
     "4. A list of file dependencies for this tool. Note that each can also be a Unix glob to capture multiple files. In this case, our example tool requires a single file to run: ```example_tool.py```.\n",
     "\n",
-    "Our example tool requires the python package ```click``` to be installed on the cluster. We satisfy this dependency by loading the ```Anaconda3/5.0.0``` module on the cluster before running the tool. The string passed to `setup_commands` is copied directly to the [script used to eventually submit the Slurm job](experiments/slurm_test_1/_run.sh), after pregenerated SBATCH arguments but before any tasks are executed. Custom arguments to `sbatch` can also be provided here, e.g. `#SBATCH --mem=0` to allow full use of the node memory.\n",
+    "Our example tool requires Python 3 to be installed on the cluster. We satisfy this dependency by loading the ```Anaconda3/5.0.0``` module on the cluster before running the tool. The string passed to `setup_commands` is copied directly to the [script used to eventually submit the Slurm job](experiments/slurm_test_1/_run.sh), after pregenerated SBATCH arguments but before any tasks are executed. Custom arguments to `sbatch` can also be provided here, e.g. `#SBATCH --mem=0` to allow full use of the node memory.\n",
     "\n",
     "By default, everything written to stdout by the tool will be stored in a ```.out``` file and automatically parsed to be queried with SQL, while everything written to stderr by the tool will be stored in a ```.log``` file and not parsed. This behavior can be adjusted by including the optional arguments ```output_argument``` (defaults to ```'>>'``` indicating stdout) and ```log_argument``` (defaults to ```'2>'```, indicating stderr) when initializing the SlurmExperiment."
    ]
@@ -77,9 +77,9 @@
     "class SlurmTest(slurmqueen.SlurmExperiment):\n",
     "    def __init__(self, experiment_id, changing_args):\n",
     "        slurmqueen.SlurmExperiment.__init__(self, 'experiments/' + experiment_id, \n",
-    "                                            'python example_tool.py',\n",
+    "                                            'python3 example_tool.py',\n",
     "                                             changing_args,\n",
-    "                                             ['example_tool.py'],\n",
+    "                                             dependencies=['example_tool.py'],\n",
     "                                             setup_commands=\"module load Anaconda3/5.0.0\")"
    ]
   },
@@ -128,12 +128,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to davinci.rice.edu\n",
+      "Connected to nots.rice.edu\n",
       "Created 9 local files\n",
       "Compressed local files\n",
       "Copied files to remote server\n",
       "Attempting to submit job\n",
-      "Submitted batch job 5677461\n",
+      "Submitted batch job 730638\n",
       "\n"
      ]
     }
@@ -186,13 +186,6 @@
    "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading all output data into SQL table\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -347,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_1 = slurmqueen.Experiment('python example_tool.py',\n",
+    "experiment_1 = slurmqueen.Experiment('python3 example_tool.py',\n",
     "                                     [{'': [chr(a+65) + chr(b+65)],\n",
     "                                       'a': a, 'b': b,\n",
     "                                       '|desc': '%d + %d' % (a, b)\n",
@@ -476,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
