Read list of tasks from file instead of find

--- a/example/example_experimental_setup.ipynb
+++ b/example/example_experimental_setup.ipynb
@@ -133,7 +133,7 @@
       "Compressed local files\n",
       "Copied files to remote server\n",
       "Attempting to submit job\n",
-      "Submitted batch job 730638\n",
+      "Submitted batch job 1053370\n",
       "\n"
      ]
     }
